--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@pinia/colada": "^0.14.1",
     "axios": "^1.8.2",
     "element-plus": "^2.9.6",
     "pinia": "^3.0.1",
